--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js Sphere with Orbit Controls</title>
+    <title>Three.js Sigma Bond Representation</title>
     <style>
         body { margin: 0; display: flex; flex-direction: column; align-items: center; }
         #canvas-container { width: 100%; height: 60vh; }
@@ -14,8 +14,8 @@
 <body>
     <div id="canvas-container"></div>
     <div id="description">
-        <h1>Three.js Sphere with Orbit Controls</h1>
-        <p>このページでは、Three.jsを使用して作成された3D球体を表示しています。球体はマウスでドラッグすることで回転させることができます。また、スクロールホイールを使用してズームインおよびズームアウトすることも可能です。</p>
+        <h1>Three.js Sigma Bond Representation</h1>
+        <p>このページでは、Three.jsを使用して化学のσ結合を表現した3D球体を表示しています。2つの球体はσ結合のように配置されています。球体はマウスでドラッグすることで回転させることができます。また、スクロールホイールを使用してズームインおよびズームアウトすることも可能です。</p>
         <p>Three.jsのOrbitControlsを使用して、ユーザーが直感的に3Dオブジェクトを操作できるようにしています。これにより、3D空間内での視点の移動やズームが簡単に行えます。</p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -36,10 +36,16 @@
         // 球体のジオメトリとマテリアルを作成
         const geometry = new THREE.SphereGeometry(1, 32, 32);
         const material = new THREE.MeshBasicMaterial({ color: 0x0077ff, wireframe: true });
-        const sphere = new THREE.Mesh(geometry, material);
 
-        // 球体をシーンに追加
-        scene.add(sphere);
+        // 1つ目の球体を作成し、シーンに追加
+        const sphere1 = new THREE.Mesh(geometry, material);
+        sphere1.position.set(1.5, 0, 0); // x軸に1.5単位移動
+        scene.add(sphere1);
+
+        // 2つ目の球体を作成し、シーンに追加
+        const sphere2 = new THREE.Mesh(geometry, material);
+        sphere2.position.set(-1.5, 0, 0); // x軸に-1.5単位移動
+        scene.add(sphere2);
 
         // OrbitControlsを設定
         const controls = new THREE.OrbitControls(camera, renderer.domElement);
@@ -69,3 +75,4 @@
     </script>
 </body>
 </html>
+``
