--- a/index.html
+++ b/index.html
@@ -1,103 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Electrostatic Potential</title>
-    <style>
-        body { margin: 0; display: flex; flex-direction: column; align-items: center; }
-        #canvas-container { width: 100%; height: 60vh; }
-        canvas { display: block; width: 100%; height: 100%; }
-        #description { padding: 20px; max-width: 800px; text-align: center; }
-    </style>
+    <title>RL Circuit Simulation</title>
 </head>
 <body>
-    <div id="canvas-container"></div>
-    <div id="description">
-        <h1>3D Electrostatic Potential</h1>
-        <p>このページでは、Two.jsを使用して2つの点電荷（正と負）による静電ポテンシャルを3Dで描画しています。</p>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
-    <script>
-        // シーンを作成
-        const scene = new THREE.Scene();
-
-        // カメラを作成
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / (window.innerHeight * 0.6), 0.1, 1000);
-        camera.position.z = 5;
-
-        // レンダラーを作成
-        const renderer = new THREE.WebGLRenderer();
-        renderer.setSize(window.innerWidth, window.innerHeight * 0.6);
-        document.getElementById('canvas-container').appendChild(renderer.domElement);
-
-        // 点電荷の位置と強度
-        const charge1 = { position: new THREE.Vector3(-1, 0, 0), charge: 1 };
-        const charge2 = { position: new THREE.Vector3(1, 0, 0), charge: -1 };
-
-        // グリッドサイズと分割数
-        const size = 4;
-        const divisions = 50;
-
-        // ポテンシャルを計算する関数
-        function calculatePotential(x, y, z) {
-            const k = 1; // クーロン定数 (単位を簡略化)
-            const r1 = Math.sqrt((x - charge1.position.x) ** 2 + (y - charge1.position.y) ** 2 + (z - charge1.position.z) ** 2);
-            const r2 = Math.sqrt((x - charge2.position.x) ** 2 + (y - charge2.position.y) ** 2 + (z - charge2.position.z) ** 2);
-            const potential1 = charge1.charge / r1;
-            const potential2 = charge2.charge / r2;
-            return k * (potential1 + potential2);
-        }
-
-        // ジオメトリを作成
-        const geometry = new THREE.PlaneGeometry(size, size, divisions, divisions);
-        const positionAttribute = geometry.attributes.position;
-        const vertex = new THREE.Vector3();
-
-        for (let i = 0; i < positionAttribute.count; i++) {
-            vertex.fromBufferAttribute(positionAttribute, i);
-            const potential = calculatePotential(vertex.x, vertex.y, 0);
-            vertex.z = potential; // ポテンシャルをZ座標に設定
-            positionAttribute.setXYZ(i, vertex.x, vertex.y, vertex.z);
-        }
-
-        geometry.computeVertexNormals();
-
-        // メテリアルを作成
-        const material = new THREE.MeshBasicMaterial({ color: 0x00ff00, wireframe: true });
-
-        // メッシュを作成
-        const mesh = new THREE.Mesh(geometry, material);
-
-        // メッシュをシーンに追加
-        scene.add(mesh);
-
-        // OrbitControlsを設定
-        const controls = new THREE.OrbitControls(camera, renderer.domElement);
-        controls.enableDamping = true; // 慣性を有効にする
-        controls.dampingFactor = 0.25; // 慣性の強さ
-        controls.enableZoom = true; // ズームを有効にする
-
-        // アニメーションループ
-        function animate() {
-            requestAnimationFrame(animate);
-
-            // コントロールの更新
-            controls.update();
-
-            // シーンをレンダリング
-            renderer.render(scene, camera);
-        }
-
-        animate();
-
-        // ウィンドウのリサイズに対応
-        window.addEventListener('resize', () => {
-            camera.aspect = window.innerWidth / (window.innerHeight * 0.6);
-            camera.updateProjectionMatrix();
-            renderer.setSize(window.innerWidth, window.innerHeight * 0.6);
-        });
-    </script>
+    <h1>RL Circuit Simulation</h1>
+    <iframe src="https://www.falstad.com/circuit/circuitjs.html?cct=$+1+0.000005+10.20027730826997+50+5+43%0As+384+80+448+80+0+0+false%0Aw+176+80+176+352+0%0Av+448+352+448+80+0+0+40+5+0+0+0.5%0Ar+384+352+448+352+0+1000%0Aw+176+352+384+352+0%0A162+384+80+176+80+1+2.1024259+1+0+0+0.01%0A" width="100%" height="600px"></iframe>
 </body>
 </html>
